--- a/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/configs/s1-leaf1.cfg
+++ b/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/configs/s1-leaf1.cfg
@@ -24,7 +24,7 @@ aaa authorization exec default local
 no enable password
 no aaa root
 !
-username arista privilege 15 role network-admin secret arista123!!
+username arista privilege 15 role network-admin secret arista123
 !
 vlan 10
    name Ten
