--- a/ansible_collections/arista/avd/molecule/deploy_to_cv/converge.yml
+++ b/ansible_collections/arista/avd/molecule/deploy_to_cv/converge.yml
@@ -8,82 +8,93 @@
     cv_server: www.cv-staging.corp.arista.io
     token: "{{ lookup('file', playbook_dir ~ '/token-cvaas.tok')}}"
     # url: https://{{ cv_server }}/api/resources/workspace/v1/WorkspaceBuildDetails/all
-    url: https://{{ cv_server }}/api/v3/services/arista.configlet.v1.ConfigletService/GetOne
+    ws_url: https://{{ cv_server }}/api/v3/services/arista.configlet.v1.ConfigletService/GetOne
+    cc_url: https://{{ cv_server }}/api/v3/services/arista.changecontrol.v1.ChangeControlService/GetOne
     # url: "https://{{ cvp }}/api/resources/studio/v1/StudioConfig?key.studioId=studio-static-configlet&key.workspaceId="
     configuration_dir: "{{ playbook_dir }}/intended/configs"
     structured_config_dir: "{{ playbook_dir }}/intended/structured_configs"
 
-    ws_name: avd-static-studios-5
+    ws_name: avd-static-studios-15
     ws_description: sample description
     ws_req_state: submitted
     ws_force: true
 
     # TODO: cc_id is not getting set to anything other than Workspace-<ws_nane>
-    cc_id: Workspace-avd-static-studios-5
+    cc_id: Workspace-avd-static-studios-15
     cc_requested_state: running
-    cc_name: cc_avd_studios-5
+    cc_name: cc_avd_studios-15
     cc_desctiption: sample description
 
+  # TODO: change cc stage to `running`, get CC state from cvp and assert
   tasks:
-    # - name: Test = Provision CVP with AVD configuration
-    #   run_once: true
-    #   delegate_to: localhost
-    #   arista.avd.deploy_to_cv:
-    #     configuration_dir: "{{ configuration_dir }}"
-    #     structured_config_dir: "{{ structured_config_dir }}"
-    #     # structured_config_suffix: "yml"
-    #     # device_list: "{{ ansible_play_hosts }}"
-    #     device_list: ["s1-leaf1", "s1-leaf2", "s1-leaf3", "s1-leaf4", "s1-spine1", "s1-spine2"]
-    #     # device_list: ["s1-leaf1"]
-    #     # strict_tags: false
-    #     # skip_missing_devices: false
-    #     # configlet_name_template: "AVD-${hostname}"
-    #     cv_servers: [ '{{ cv_server }}' ]
-    #     cv_token: '{{ token }}'
-    #     # cv_verify_certs: True
-    #     workspace:
-    #       name: '{{ ws_name }}'
-    #       description: '{{ ws_description }}'
-    #       id: '{{ ws_name }}'
-    #       requested_state: '{{ ws_req_state }}'
-    #       force: '{{ ws_force }}'
-    #     change_control:
-    #       name: '{{ cc_name }}'
-    #       description: '{{ cc_desctiption }}'
-    #       requested_state: '{{ cc_requested_state }}'
-    #     # timeouts:
-    #     #   workspace_build_timeout: 300.0
-    #     #   change_control_creation_timeout: 300.0
-    #     return_details: true
-    #   register: CVP_RESULTS
+    - name: Test = Provision CVP with AVD configuration
+      run_once: true
+      delegate_to: localhost
+      arista.avd.deploy_to_cv:
+        configuration_dir: "{{ configuration_dir }}"
+        structured_config_dir: "{{ structured_config_dir }}"
+        # structured_config_suffix: "yml"
+        # device_list: "{{ ansible_play_hosts }}"
+        device_list: ["s1-leaf1", "s1-leaf2", "s1-leaf3", "s1-leaf4", "s1-spine1", "s1-spine2"]
+        # device_list: ["s1-leaf1"]
+        # strict_tags: false
+        # skip_missing_devices: false
+        # configlet_name_template: "AVD-${hostname}"
+        cv_servers: [ '{{ cv_server }}' ]
+        cv_token: '{{ token }}'
+        # cv_verify_certs: True
+        workspace:
+          name: '{{ ws_name }}'
+          description: '{{ ws_description }}'
+          id: '{{ ws_name }}'
+          requested_state: '{{ ws_req_state }}'
+          force: '{{ ws_force }}'
+        change_control:
+          name: '{{ cc_name }}'
+          description: '{{ cc_desctiption }}'
+          requested_state: '{{ cc_requested_state }}'
+        # timeouts:
+        #   workspace_build_timeout: 300.0
+        #   change_control_creation_timeout: 300.0
+        return_details: true
+      register: CVP_RESULTS
 
     # - name: 'Display CVP result'
     #   run_once: true
     #   debug:
     #     msg: '{{CVP_RESULTS}}'
 
-    # - name: check CVP returns
-    #   ansible.builtin.assert:
-    #     that:
-    #       # workspace
-    #       - CVP_RESULTS.workspace.name == ws_name
-    #       - CVP_RESULTS.workspace.final_state == CVP_RESULTS.workspace.requested_state
-    #       - CVP_RESULTS.workspace.final_state
-    #       # Change control
-    #       - CVP_RESULTS.change_control.id == cc_id
-    #       - CVP_RESULTS.change_control.name == cc_name
-    #       - CVP_RESULTS.change_control.requested_state == cc_requested_state
-    #       - CVP_RESULTS.change_control.description == cc_desctiption
-    #       # configs
-    #       # errors and warnings
-    #       - CVP_RESULTS.errors == []
+    - name: check CVP returns
+      ansible.builtin.assert:
+        that:
+          # workspace
+          - CVP_RESULTS.workspace.name == ws_name
+          - CVP_RESULTS.workspace.final_state == CVP_RESULTS.workspace.requested_state
+          - CVP_RESULTS.workspace.final_state
+          # errors and warnings
+          - CVP_RESULTS.errors == []
+          # tags
+          - CVP_RESULTS.deployed_device_tags != []
+          - CVP_RESULTS.deployed_interface_tags != []
+          # Change control
+          - CVP_RESULTS.change_control.id == cc_id
+          - CVP_RESULTS.change_control.name == cc_name
+          - CVP_RESULTS.change_control.requested_state == cc_requested_state
+          - CVP_RESULTS.change_control.description == cc_desctiption
+
+    - name: check tags from output
+      ansible.builtin.assert:
+        that:
+          - item.0.label == item.1.label
+          - item.0.value == item.1.value
+      loop: "{{ CVP_RESULTS.deployed_device_tags | zip(CVP_RESULTS.device_tags) | list }}"
 
     - name: get workspace information
       delegate_to: localhost
       run_once: true
       # hosts: localhost
       ansible.builtin.uri:
-        url: '{{ url }}'
+        url: '{{ ws_url }}'
         return_content: true
         validate_certs: false
         headers:
@@ -101,7 +112,29 @@
         - "avd-s1-leaf4"
       register: result
 
-    - name: 'Display GET results'
+    # CC information
+    # - name: get CC information
+    #   delegate_to: localhost
+    #   run_once: true
+    #   ansible.builtin.uri:
+    #     url: '{{ cc_url }}'
+    #     return_content: true
+    #     validate_certs: false
+    #     headers:
+    #       Cookie: "access_token={{ token }}"
+    #     method: POST
+    #     body_format: json
+    #     body:
+    #       key:
+    #         id: '{{ cc_id }}'
+    #   register: CC_INFO
+
+    # - name: 'Display CC result'
+    #   run_once: true
+    #   debug:
+    #     msg: '{{ CC_INFO.json[0].value.status }}'
+
+    - name: 'Set configlets facts'
       run_once: true
       vars:
         configs: ['{{ configuration_dir }}/s1-leaf1.cfg',
