Refactor(eos_designs): Better security for IPsec configuration for WAN

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder1.cfg
@@ -187,13 +187,13 @@ ip security
       local-id 192.168.144.2
    !
    sa policy CP-SA-POLICY
-      esp encryption aes128
+      esp encryption aes256gcm128
       pfs dh-group 14
    !
    profile CP-PROFILE
       ike-policy CP-IKE-POLICY
       sa-policy CP-SA-POLICY
-      connection start
+      connection add
       shared-key 7 ABCDEF1234567890
       dpd 10 50 clear
       mode transport
