--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-default-policy.cfg
@@ -99,11 +99,11 @@ ip security
       local-id 192.168.255.1
    !
    sa policy DP-SA-POLICY
-      esp encryption aes128
+      esp encryption aes256gcm128
       pfs dh-group 14
    !
    sa policy CP-SA-POLICY
-      esp encryption aes128
+      esp encryption aes256gcm128
       pfs dh-group 14
    !
    profile DP-PROFILE
