--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -293,13 +293,12 @@ all:
               hosts:
                 cv-pathfinder-transit:
               children:
-                # TODO HA PR
-                #SITE_HA_ENABLED:
-                #  hosts:
-                #    cv-pathfinder-edge2:
-                #    cv-pathfinder-edge3:
-                #    site-ha-enabled-leaf1:
-                #    site-ha-enabled-leaf2:
+                SITE_HA_ENABLED:
+                  hosts:
+                    cv-pathfinder-edge2:
+                    cv-pathfinder-edge3:
+                    site-ha-enabled-leaf1:
+                    site-ha-enabled-leaf2:
                 SITE_HA_DISABLED:
                   hosts:
                     cv-pathfinder-edge:
