--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/underlay_routing_protocol.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/underlay_routing_protocol.schema.yml
@@ -14,6 +14,7 @@ keys:
     description: |
       - The following underlay routing protocols are supported:
         - EBGP (default for l3ls-evpn)
+        - IBGP
         - OSPF.
         - OSPF-LDP*.
         - ISIS.
@@ -25,6 +26,7 @@ keys:
       *Only supported with core_interfaces data model.
     valid_values:
       - "ebgp"
+      - "ibgp"
       - "ospf"
       - "ospf-ldp"
       - "isis"
