--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
@@ -120,6 +120,9 @@ router path-selection
          name cv-pathfinder-pathfinder1
          ipv4 address 10.8.8.8
    !
+   path-group LAN_HA id 65535
+      flow assignment lan
+   !
    path-group LTE id 102
    !
    path-group MPLS id 100
@@ -134,37 +137,45 @@ router path-selection
    !
    load-balance policy LB-CONTROL-PLANE-PROFILE
       path-group INET
+      path-group LAN_HA
       path-group MPLS
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-DEFAULT
       path-group Equinix
       path-group INET
+      path-group LAN_HA
       path-group MPLS priority 42
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-VIDEO
       path-group INET
+      path-group LAN_HA
       path-group MPLS
    !
    load-balance policy LB-PROD-AVT-POLICY-DEFAULT
       path-group INET
+      path-group LAN_HA
       path-group MPLS priority 2
    !
    load-balance policy LB-PROD-AVT-POLICY-VIDEO
       loss-rate 42.0
+      path-group LAN_HA
       path-group LTE
       path-group MPLS
       path-group INET priority 2
    !
    load-balance policy LB-PROD-AVT-POLICY-VOICE
       jitter 42
+      path-group LAN_HA
       path-group MPLS
       path-group INET priority 2
    !
    load-balance policy LB-TRANSIT-AVT-POLICY-DEFAULT
       path-group INET
+      path-group LAN_HA
       path-group MPLS priority 2
    !
    load-balance policy LB-TRANSIT-AVT-POLICY-VOICE
+      path-group LAN_HA
       path-group MPLS
       path-group INET priority 2
 !
