--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
@@ -85,7 +85,7 @@ $defs:
             This is not rendered in the configuration but used for WAN designs.
         connected_to_pathfinder:
           type: bool
-          default: True
+          default: true
           description: |-
             For a WAN interface (`wan_path_group` is set), allow to disable the static tunnel towards Pathfinders.
         raw_eos_cli:
