--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2.cfg
@@ -10,6 +10,7 @@ flow tracking hardware
          collector 127.0.0.1
          local interface Loopback0
          template interval 5000
+   no shutdown
 !
 transceiver qsfp default-mode 4x10G
 !
@@ -19,7 +20,79 @@ ip as-path access-list ASPATH-WAN permit 65000 any
 !
 hostname cv-pathfinder-edge2
 !
+router adaptive-virtual-topology
+   topology role edge
+   region AVD_Land_West id 42
+   zone DEFAULT-ZONE id 1
+   site Site423 id 423
+   !
+   policy DEFAULT-AVT-POLICY
+      !
+      match application-profile VIDEO
+         avt profile DEFAULT-AVT-POLICY-VIDEO
+      !
+      match application-profile default
+         avt profile DEFAULT-AVT-POLICY-DEFAULT
+   !
+   policy DEFAULT-AVT-POLICY-WITH-CP
+      !
+      match application-profile CONTROL-PLANE-APPLICATION-PROFILE
+         avt profile CONTROL-PLANE-PROFILE
+      !
+      match application-profile VIDEO
+         avt profile DEFAULT-AVT-POLICY-VIDEO
+      !
+      match application-profile default
+         avt profile DEFAULT-AVT-POLICY-DEFAULT
+   !
+   policy PROD-AVT-POLICY
+      !
+      match application-profile VOICE
+         avt profile PROD-AVT-POLICY-VOICE
+      !
+      match application-profile VIDEO
+         avt profile PROD-AVT-POLICY-VIDEO
+      !
+      match application-profile default
+         avt profile PROD-AVT-POLICY-DEFAULT
+   !
+   profile CONTROL-PLANE-PROFILE
+      path-selection load-balance LB-CONTROL-PLANE-PROFILE
+   !
+   profile DEFAULT-AVT-POLICY-DEFAULT
+      path-selection load-balance LB-DEFAULT-AVT-POLICY-DEFAULT
+   !
+   profile DEFAULT-AVT-POLICY-VIDEO
+      path-selection load-balance LB-DEFAULT-AVT-POLICY-VIDEO
+   !
+   profile PROD-AVT-POLICY-DEFAULT
+      path-selection load-balance LB-PROD-AVT-POLICY-DEFAULT
+   !
+   profile PROD-AVT-POLICY-VIDEO
+      path-selection load-balance LB-PROD-AVT-POLICY-VIDEO
+   !
+   profile PROD-AVT-POLICY-VOICE
+      path-selection load-balance LB-PROD-AVT-POLICY-VOICE
+   !
+   vrf default
+      avt policy DEFAULT-AVT-POLICY-WITH-CP
+      avt profile DEFAULT-AVT-POLICY-DEFAULT id 1
+      avt profile DEFAULT-AVT-POLICY-VIDEO id 3
+      avt profile CONTROL-PLANE-PROFILE id 254
+   !
+   vrf IT
+      avt policy DEFAULT-AVT-POLICY
+      avt profile DEFAULT-AVT-POLICY-DEFAULT id 1
+      avt profile DEFAULT-AVT-POLICY-VIDEO id 3
+   !
+   vrf PROD
+      avt policy PROD-AVT-POLICY
+      avt profile PROD-AVT-POLICY-DEFAULT id 1
+      avt profile PROD-AVT-POLICY-VOICE id 2
+      avt profile PROD-AVT-POLICY-VIDEO id 4
+!
 router path-selection
+   tcp mss ceiling ipv4 ingress
    !
    path-group INET id 101
       ipsec profile CP-PROFILE
@@ -29,7 +102,7 @@ router path-selection
       !
       peer dynamic
       !
-      peer static router-ip 192.168.44.1
+      peer static router-ip 192.168.144.1
          name cv-pathfinder-pathfinder
          ipv4 address 10.7.7.7
          ipv4 address 10.9.9.9
@@ -40,21 +113,16 @@ router path-selection
       !
       local interface Ethernet52
       !
-      peer static router-ip 192.168.42.3
+      local interface Ethernet53
+      !
+      peer static router-ip 192.168.142.3
          name LAN_HA
-         ipv4 address 172.17.0.5
+         ipv4 address 172.17.0.9
+         ipv4 address 172.17.0.11
    !
-   load-balance policy LBPOLICY
+   load-balance policy LB-CONTROL-PLANE-PROFILE
       path-group INET
       path-group LAN_HA
-<<<<<<< HEAD
-!
-router adaptive-virtual-topology
-   topology role edge
-   region AVD_Land_West id 42
-   zone DEFAULT-ZONE id 1
-   site Site423 id 423
-=======
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-DEFAULT
       path-group INET
@@ -77,22 +145,25 @@ router adaptive-virtual-topology
       jitter 42
       path-group LAN_HA
       path-group INET priority 2
->>>>>>> 0f36051a1 (Feat: Proper handling of LAN_HA pathgroup on pathfinder)
 !
 spanning-tree mode none
 !
 no enable password
 no aaa root
 !
+vrf instance IT
+!
 vrf instance MGMT
+!
+vrf instance PROD
 !
 ip security
    !
    ike policy DP-IKE-POLICY
-      local-id 192.168.42.2
+      local-id 192.168.142.2
    !
    ike policy CP-IKE-POLICY
-      local-id 192.168.42.2
+      local-id 192.168.142.2
    !
    sa policy DP-SA-POLICY
       esp encryption aes128
@@ -125,7 +196,7 @@ interface Dps1
    description DPS Interface
    mtu 9214
    flow tracker hardware WAN-FLOW-TRACKER
-   tcp mss ceiling ipv4 1000
+   ip address 192.168.142.2/32
 !
 interface Ethernet1
    no shutdown
@@ -134,8 +205,6 @@ interface Ethernet1
    ip address dhcp
    dhcp client accept default-route
 !
-<<<<<<< HEAD
-=======
 interface Ethernet52
    description P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet1
    no shutdown
@@ -184,7 +253,6 @@ interface Ethernet53.100
    vrf IT
    ip address 172.17.0.7/31
 !
->>>>>>> 339319bd3 (Feat(eos_designs): Add flow tracker on LAN interfaces for edges)
 interface Loopback0
    description Router_ID
    no shutdown
@@ -192,14 +260,58 @@ interface Loopback0
 !
 interface Vxlan1
    description cv-pathfinder-edge2_VTEP
-   vxlan source-interface Loopback0
+   vxlan source-interface Dps1
    vxlan udp-port 4789
    vxlan vrf default vni 1
+   vxlan vrf IT vni 100
+   vxlan vrf PROD vni 42
+!
+application traffic recognition
+   !
+   application ipv4 CONTROL-PLANE-APPLICATION
+      destination prefix field-set CONTROL-PLANE-APP-DEST-PREFIXES
+   !
+   application ipv4 CUSTOM-APPLICATION-1
+      source prefix field-set CUSTOM-SRC-PREFIX-1
+      destination prefix field-set CUSTOM-DEST-PREFIX-1
+      protocol tcp
+   !
+   application ipv4 CUSTOM-APPLICATION-2
+      protocol tcp source port field-set TCP-SRC-2 destination port field-set TCP-DEST-2
+   !
+   category VIDEO1
+      application CUSTOM-APPLICATION-2
+      application microsoft-teams
+   !
+   application-profile CONTROL-PLANE-APPLICATION-PROFILE
+      application CONTROL-PLANE-APPLICATION
+   !
+   application-profile VIDEO
+      application CUSTOM-APPLICATION-1
+      application skype
+      category VIDEO1
+   !
+   application-profile VOICE
+      application CUSTOM-VOICE-APPLICATION
+   !
+   field-set ipv4 prefix CONTROL-PLANE-APP-DEST-PREFIXES
+      192.168.144.1/32
+   !
+   field-set ipv4 prefix CUSTOM-DEST-PREFIX-1
+      6.6.6.0/24
+   !
+   field-set ipv4 prefix CUSTOM-SRC-PREFIX-1
+      42.42.42.0/24
+   !
+   field-set l4-port TCP-DEST-2
+      666, 777
+   !
+   field-set l4-port TCP-SRC-2
+      42
 !
 ip routing
+ip routing vrf IT
 no ip routing vrf MGMT
-<<<<<<< HEAD
-=======
 ip routing vrf PROD
 !
 ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.2:423
@@ -223,12 +335,8 @@ route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
    set extcommunity soo 192.168.42.2:423 additive
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
-<<<<<<< HEAD
-   match interface Ethernet52
-=======
    description Advertise local routes towards LAN
    match extcommunity ECL-EVPN-SOO
->>>>>>> d804f23f5 (Refactor: Use first ha peer loopback0 as SOO)
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
    description Advertise routes received from WAN iBGP towards LAN
@@ -247,11 +355,6 @@ route-map RM-CONN-2-BGP permit 10
 route-map RM-CONN-2-BGP permit 50
    match ip address prefix-list PL-WAN-HA-PREFIXES
 !
-<<<<<<< HEAD
-route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 30
-   match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
->>>>>>> 479d1aebd (Feat: Add underlay prefixes in route-map for BGP)
-=======
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
 !
@@ -262,7 +365,6 @@ route-map RM-EVPN-SOO-IN permit 20
 !
 route-map RM-EVPN-SOO-OUT permit 10
    set extcommunity soo 192.168.42.2:423 additive
->>>>>>> d804f23f5 (Refactor: Use first ha peer loopback0 as SOO)
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
@@ -280,23 +382,21 @@ router bgp 65000
    neighbor IPv4-UNDERLAY-PEERS route-map RM-BGP-UNDERLAY-PEERS-OUT out
    neighbor WAN-OVERLAY-PEERS peer group
    neighbor WAN-OVERLAY-PEERS remote-as 65000
-   neighbor WAN-OVERLAY-PEERS update-source Loopback0
+   neighbor WAN-OVERLAY-PEERS update-source Dps1
    neighbor WAN-OVERLAY-PEERS bfd
    neighbor WAN-OVERLAY-PEERS ttl maximum-hops 1
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
-<<<<<<< HEAD
-   neighbor 192.168.44.1 peer group WAN-OVERLAY-PEERS
-   neighbor 192.168.44.1 description cv-pathfinder-pathfinder
-=======
-   neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
-   neighbor 172.17.0.2 remote-as 65000
-   neighbor 172.17.0.2 description site-ha-enabled-leaf_Ethernet1
+   neighbor 172.17.0.4 peer group IPv4-UNDERLAY-PEERS
+   neighbor 172.17.0.4 remote-as 65000
+   neighbor 172.17.0.4 description site-ha-enabled-leaf1_Ethernet1
+   neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
+   neighbor 172.17.0.6 remote-as 65000
+   neighbor 172.17.0.6 description site-ha-enabled-leaf2_Ethernet1
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
->>>>>>> a53a1aba4 (Feat: Align underlay routing protocols)
    !
    address-family evpn
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
@@ -318,8 +418,6 @@ router bgp 65000
       bgp additional-paths receive
       bgp additional-paths send any
       neighbor WAN-OVERLAY-PEERS activate
-<<<<<<< HEAD
-=======
    !
    vrf default
       rd 192.168.42.2:1
@@ -332,9 +430,12 @@ router bgp 65000
       route-target import evpn 100:100
       route-target export evpn 100:100
       router-id 192.168.42.2
-      neighbor 172.17.0.2 remote-as 65000
-      neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.2 description site-ha-enabled-leaf_Ethernet1.100_vrf_IT
+      neighbor 172.17.0.4 remote-as 65000
+      neighbor 172.17.0.4 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.4 description site-ha-enabled-leaf1_Ethernet1.100_vrf_IT
+      neighbor 172.17.0.6 remote-as 65000
+      neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.6 description site-ha-enabled-leaf2_Ethernet1.100_vrf_IT
       redistribute connected
    !
    vrf PROD
@@ -342,11 +443,13 @@ router bgp 65000
       route-target import evpn 42:42
       route-target export evpn 42:42
       router-id 192.168.42.2
-      neighbor 172.17.0.2 remote-as 65000
-      neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.2 description site-ha-enabled-leaf_Ethernet1.42_vrf_PROD
+      neighbor 172.17.0.4 remote-as 65000
+      neighbor 172.17.0.4 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.4 description site-ha-enabled-leaf1_Ethernet1.42_vrf_PROD
+      neighbor 172.17.0.6 remote-as 65000
+      neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.6 description site-ha-enabled-leaf2_Ethernet1.42_vrf_PROD
       redistribute connected
->>>>>>> a53a1aba4 (Feat: Align underlay routing protocols)
 !
 router traffic-engineering
 !
