--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3.cfg
@@ -10,6 +10,7 @@ flow tracking hardware
          collector 127.0.0.1
          local interface Loopback0
          template interval 5000
+   no shutdown
 !
 transceiver qsfp default-mode 4x10G
 !
@@ -19,7 +20,79 @@ ip as-path access-list ASPATH-WAN permit 65000 any
 !
 hostname cv-pathfinder-edge3
 !
+router adaptive-virtual-topology
+   topology role edge
+   region AVD_Land_West id 42
+   zone DEFAULT-ZONE id 1
+   site Site423 id 423
+   !
+   policy DEFAULT-AVT-POLICY
+      !
+      match application-profile VIDEO
+         avt profile DEFAULT-AVT-POLICY-VIDEO
+      !
+      match application-profile default
+         avt profile DEFAULT-AVT-POLICY-DEFAULT
+   !
+   policy DEFAULT-AVT-POLICY-WITH-CP
+      !
+      match application-profile CONTROL-PLANE-APPLICATION-PROFILE
+         avt profile CONTROL-PLANE-PROFILE
+      !
+      match application-profile VIDEO
+         avt profile DEFAULT-AVT-POLICY-VIDEO
+      !
+      match application-profile default
+         avt profile DEFAULT-AVT-POLICY-DEFAULT
+   !
+   policy PROD-AVT-POLICY
+      !
+      match application-profile VOICE
+         avt profile PROD-AVT-POLICY-VOICE
+      !
+      match application-profile VIDEO
+         avt profile PROD-AVT-POLICY-VIDEO
+      !
+      match application-profile default
+         avt profile PROD-AVT-POLICY-DEFAULT
+   !
+   profile CONTROL-PLANE-PROFILE
+      path-selection load-balance LB-CONTROL-PLANE-PROFILE
+   !
+   profile DEFAULT-AVT-POLICY-DEFAULT
+      path-selection load-balance LB-DEFAULT-AVT-POLICY-DEFAULT
+   !
+   profile DEFAULT-AVT-POLICY-VIDEO
+      path-selection load-balance LB-DEFAULT-AVT-POLICY-VIDEO
+   !
+   profile PROD-AVT-POLICY-DEFAULT
+      path-selection load-balance LB-PROD-AVT-POLICY-DEFAULT
+   !
+   profile PROD-AVT-POLICY-VIDEO
+      path-selection load-balance LB-PROD-AVT-POLICY-VIDEO
+   !
+   profile PROD-AVT-POLICY-VOICE
+      path-selection load-balance LB-PROD-AVT-POLICY-VOICE
+   !
+   vrf default
+      avt policy DEFAULT-AVT-POLICY-WITH-CP
+      avt profile DEFAULT-AVT-POLICY-DEFAULT id 1
+      avt profile DEFAULT-AVT-POLICY-VIDEO id 3
+      avt profile CONTROL-PLANE-PROFILE id 254
+   !
+   vrf IT
+      avt policy DEFAULT-AVT-POLICY
+      avt profile DEFAULT-AVT-POLICY-DEFAULT id 1
+      avt profile DEFAULT-AVT-POLICY-VIDEO id 3
+   !
+   vrf PROD
+      avt policy PROD-AVT-POLICY
+      avt profile PROD-AVT-POLICY-DEFAULT id 1
+      avt profile PROD-AVT-POLICY-VOICE id 2
+      avt profile PROD-AVT-POLICY-VIDEO id 4
+!
 router path-selection
+   tcp mss ceiling ipv4 ingress
    !
    path-group LAN_HA id 65535
       ipsec profile DP-PROFILE
@@ -27,9 +100,12 @@ router path-selection
       !
       local interface Ethernet52
       !
-      peer static router-ip 192.168.42.2
+      local interface Ethernet53
+      !
+      peer static router-ip 192.168.142.2
          name LAN_HA
-         ipv4 address 172.17.0.3
+         ipv4 address 172.17.0.5
+         ipv4 address 172.17.0.7
    !
    path-group MPLS id 100
       !
@@ -38,13 +114,10 @@ router path-selection
       !
       peer dynamic
       !
-      peer static router-ip 192.168.44.1
+      peer static router-ip 192.168.144.1
          name cv-pathfinder-pathfinder
          ipv4 address 172.16.0.1
    !
-<<<<<<< HEAD
-   load-balance policy LBPOLICY
-=======
    load-balance policy LB-CONTROL-PLANE-PROFILE
       path-group LAN_HA
       path-group MPLS
@@ -68,30 +141,27 @@ router path-selection
    !
    load-balance policy LB-PROD-AVT-POLICY-VOICE
       jitter 42
->>>>>>> 0f36051a1 (Feat: Proper handling of LAN_HA pathgroup on pathfinder)
       path-group LAN_HA
       path-group MPLS
-!
-router adaptive-virtual-topology
-   topology role edge
-   region AVD_Land_West id 42
-   zone DEFAULT-ZONE id 1
-   site Site423 id 423
 !
 spanning-tree mode none
 !
 no enable password
 no aaa root
 !
+vrf instance IT
+!
 vrf instance MGMT
+!
+vrf instance PROD
 !
 ip security
    !
    ike policy DP-IKE-POLICY
-      local-id 192.168.42.3
+      local-id 192.168.142.3
    !
    ike policy CP-IKE-POLICY
-      local-id 192.168.42.3
+      local-id 192.168.142.3
    !
    sa policy DP-SA-POLICY
       esp encryption aes128
@@ -124,7 +194,7 @@ interface Dps1
    description DPS Interface
    mtu 9214
    flow tracker hardware WAN-FLOW-TRACKER
-   tcp mss ceiling ipv4 1000
+   ip address 192.168.142.3/32
 !
 interface Ethernet2
    no shutdown
@@ -132,8 +202,6 @@ interface Ethernet2
    flow tracker hardware WAN-FLOW-TRACKER
    ip address 172.15.6.6/31
 !
-<<<<<<< HEAD
-=======
 interface Ethernet52
    description P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2
    no shutdown
@@ -182,7 +250,6 @@ interface Ethernet53.100
    vrf IT
    ip address 172.17.0.11/31
 !
->>>>>>> 339319bd3 (Feat(eos_designs): Add flow tracker on LAN interfaces for edges)
 interface Loopback0
    description Router_ID
    no shutdown
@@ -190,14 +257,58 @@ interface Loopback0
 !
 interface Vxlan1
    description cv-pathfinder-edge3_VTEP
-   vxlan source-interface Loopback0
+   vxlan source-interface Dps1
    vxlan udp-port 4789
    vxlan vrf default vni 1
+   vxlan vrf IT vni 100
+   vxlan vrf PROD vni 42
+!
+application traffic recognition
+   !
+   application ipv4 CONTROL-PLANE-APPLICATION
+      destination prefix field-set CONTROL-PLANE-APP-DEST-PREFIXES
+   !
+   application ipv4 CUSTOM-APPLICATION-1
+      source prefix field-set CUSTOM-SRC-PREFIX-1
+      destination prefix field-set CUSTOM-DEST-PREFIX-1
+      protocol tcp
+   !
+   application ipv4 CUSTOM-APPLICATION-2
+      protocol tcp source port field-set TCP-SRC-2 destination port field-set TCP-DEST-2
+   !
+   category VIDEO1
+      application CUSTOM-APPLICATION-2
+      application microsoft-teams
+   !
+   application-profile CONTROL-PLANE-APPLICATION-PROFILE
+      application CONTROL-PLANE-APPLICATION
+   !
+   application-profile VIDEO
+      application CUSTOM-APPLICATION-1
+      application skype
+      category VIDEO1
+   !
+   application-profile VOICE
+      application CUSTOM-VOICE-APPLICATION
+   !
+   field-set ipv4 prefix CONTROL-PLANE-APP-DEST-PREFIXES
+      192.168.144.1/32
+   !
+   field-set ipv4 prefix CUSTOM-DEST-PREFIX-1
+      6.6.6.0/24
+   !
+   field-set ipv4 prefix CUSTOM-SRC-PREFIX-1
+      42.42.42.0/24
+   !
+   field-set l4-port TCP-DEST-2
+      666, 777
+   !
+   field-set l4-port TCP-SRC-2
+      42
 !
 ip routing
+ip routing vrf IT
 no ip routing vrf MGMT
-<<<<<<< HEAD
-=======
 ip routing vrf PROD
 !
 ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.2:423
@@ -221,12 +332,8 @@ route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
    set extcommunity soo 192.168.42.2:423 additive
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
-<<<<<<< HEAD
-   match interface Ethernet52
-=======
    description Advertise local routes towards LAN
    match extcommunity ECL-EVPN-SOO
->>>>>>> d804f23f5 (Refactor: Use first ha peer loopback0 as SOO)
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
    description Advertise routes received from WAN iBGP towards LAN
@@ -245,11 +352,6 @@ route-map RM-CONN-2-BGP permit 10
 route-map RM-CONN-2-BGP permit 50
    match ip address prefix-list PL-WAN-HA-PREFIXES
 !
-<<<<<<< HEAD
-route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 30
-   match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
->>>>>>> 479d1aebd (Feat: Add underlay prefixes in route-map for BGP)
-=======
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
 !
@@ -260,7 +362,6 @@ route-map RM-EVPN-SOO-IN permit 20
 !
 route-map RM-EVPN-SOO-OUT permit 10
    set extcommunity soo 192.168.42.2:423 additive
->>>>>>> d804f23f5 (Refactor: Use first ha peer loopback0 as SOO)
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
@@ -278,23 +379,21 @@ router bgp 65000
    neighbor IPv4-UNDERLAY-PEERS route-map RM-BGP-UNDERLAY-PEERS-OUT out
    neighbor WAN-OVERLAY-PEERS peer group
    neighbor WAN-OVERLAY-PEERS remote-as 65000
-   neighbor WAN-OVERLAY-PEERS update-source Loopback0
+   neighbor WAN-OVERLAY-PEERS update-source Dps1
    neighbor WAN-OVERLAY-PEERS bfd
    neighbor WAN-OVERLAY-PEERS ttl maximum-hops 1
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
-<<<<<<< HEAD
-   neighbor 192.168.44.1 peer group WAN-OVERLAY-PEERS
-   neighbor 192.168.44.1 description cv-pathfinder-pathfinder
-=======
-   neighbor 172.17.0.4 peer group IPv4-UNDERLAY-PEERS
-   neighbor 172.17.0.4 remote-as 65000
-   neighbor 172.17.0.4 description site-ha-enabled-leaf_Ethernet2
+   neighbor 172.17.0.8 peer group IPv4-UNDERLAY-PEERS
+   neighbor 172.17.0.8 remote-as 65000
+   neighbor 172.17.0.8 description site-ha-enabled-leaf1_Ethernet2
+   neighbor 172.17.0.10 peer group IPv4-UNDERLAY-PEERS
+   neighbor 172.17.0.10 remote-as 65000
+   neighbor 172.17.0.10 description site-ha-enabled-leaf2_Ethernet2
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
->>>>>>> a53a1aba4 (Feat: Align underlay routing protocols)
    !
    address-family evpn
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
@@ -316,8 +415,6 @@ router bgp 65000
       bgp additional-paths receive
       bgp additional-paths send any
       neighbor WAN-OVERLAY-PEERS activate
-<<<<<<< HEAD
-=======
    !
    vrf default
       rd 192.168.42.3:1
@@ -330,9 +427,12 @@ router bgp 65000
       route-target import evpn 100:100
       route-target export evpn 100:100
       router-id 192.168.42.3
-      neighbor 172.17.0.4 remote-as 65000
-      neighbor 172.17.0.4 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.4 description site-ha-enabled-leaf_Ethernet2.100_vrf_IT
+      neighbor 172.17.0.8 remote-as 65000
+      neighbor 172.17.0.8 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.8 description site-ha-enabled-leaf1_Ethernet2.100_vrf_IT
+      neighbor 172.17.0.10 remote-as 65000
+      neighbor 172.17.0.10 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.10 description site-ha-enabled-leaf2_Ethernet2.100_vrf_IT
       redistribute connected
    !
    vrf PROD
@@ -340,11 +440,13 @@ router bgp 65000
       route-target import evpn 42:42
       route-target export evpn 42:42
       router-id 192.168.42.3
-      neighbor 172.17.0.4 remote-as 65000
-      neighbor 172.17.0.4 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.4 description site-ha-enabled-leaf_Ethernet2.42_vrf_PROD
+      neighbor 172.17.0.8 remote-as 65000
+      neighbor 172.17.0.8 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.8 description site-ha-enabled-leaf1_Ethernet2.42_vrf_PROD
+      neighbor 172.17.0.10 remote-as 65000
+      neighbor 172.17.0.10 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.10 description site-ha-enabled-leaf2_Ethernet2.42_vrf_PROD
       redistribute connected
->>>>>>> a53a1aba4 (Feat: Align underlay routing protocols)
 !
 router traffic-engineering
 !
