--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3.yml
@@ -22,7 +22,7 @@ router_bgp:
       times: 1
   - name: WAN-OVERLAY-PEERS
     type: wan
-    update_source: Loopback0
+    update_source: Dps1
     bfd: true
     password: htm4AZe9mIQOO1uiMuGgYQ==
     send_community: all
@@ -39,11 +39,16 @@ router_bgp:
   - source_protocol: connected
     route_map: RM-CONN-2-BGP
   neighbors:
-  - ip_address: 172.17.0.4
+  - ip_address: 172.17.0.8
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65000'
-    peer: site-ha-enabled-leaf
-    description: site-ha-enabled-leaf_Ethernet2
+    peer: site-ha-enabled-leaf1
+    description: site-ha-enabled-leaf1_Ethernet2
+  - ip_address: 172.17.0.10
+    peer_group: IPv4-UNDERLAY-PEERS
+    remote_as: '65000'
+    peer: site-ha-enabled-leaf2
+    description: site-ha-enabled-leaf2_Ethernet2
   - ip_address: 192.168.144.1
     peer_group: WAN-OVERLAY-PEERS
     peer: cv-pathfinder-pathfinder
@@ -52,10 +57,14 @@ router_bgp:
   - name: IT
     router_id: 192.168.42.3
     neighbors:
-    - ip_address: 172.17.0.4
+    - ip_address: 172.17.0.8
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65000'
-      description: site-ha-enabled-leaf_Ethernet2.100_vrf_IT
+      description: site-ha-enabled-leaf1_Ethernet2.100_vrf_IT
+    - ip_address: 172.17.0.10
+      peer_group: IPv4-UNDERLAY-PEERS
+      remote_as: '65000'
+      description: site-ha-enabled-leaf2_Ethernet2.100_vrf_IT
     rd: 192.168.42.3:100
     route_targets:
       import:
@@ -71,10 +80,14 @@ router_bgp:
   - name: PROD
     router_id: 192.168.42.3
     neighbors:
-    - ip_address: 172.17.0.4
+    - ip_address: 172.17.0.8
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65000'
-      description: site-ha-enabled-leaf_Ethernet2.42_vrf_PROD
+      description: site-ha-enabled-leaf1_Ethernet2.42_vrf_PROD
+    - ip_address: 172.17.0.10
+      peer_group: IPv4-UNDERLAY-PEERS
+      remote_as: '65000'
+      description: site-ha-enabled-leaf2_Ethernet2.42_vrf_PROD
     rd: 192.168.42.3:42
     route_targets:
       import:
@@ -125,14 +138,6 @@ router_bgp:
         receive: true
         send:
           any: true
-<<<<<<< HEAD
-  neighbors:
-  - ip_address: 192.168.44.1
-    peer_group: WAN-OVERLAY-PEERS
-    peer: cv-pathfinder-pathfinder
-    description: cv-pathfinder-pathfinder
-=======
->>>>>>> a53a1aba4 (Feat: Align underlay routing protocols)
 service_routing_protocols_model: multi-agent
 ip_routing: true
 vlan_internal_order:
@@ -145,13 +150,17 @@ spanning_tree:
 vrfs:
 - name: MGMT
   ip_routing: false
+- name: IT
+  tenant: TenantA
+  ip_routing: true
+- name: PROD
+  tenant: TenantA
+  ip_routing: true
 management_api_http:
   enable_vrfs:
   - name: MGMT
   enable_https: true
 ethernet_interfaces:
-<<<<<<< HEAD
-=======
 - name: Ethernet52
   peer: site-ha-enabled-leaf1
   peer_interface: Ethernet2
@@ -218,7 +227,6 @@ ethernet_interfaces:
   encapsulation_dot1q_vlan: 42
   mtu: 9214
   ip_address: 172.17.0.11/31
->>>>>>> 339319bd3 (Feat(eos_designs): Add flow tracker on LAN interfaces for edges)
 - name: Ethernet2
   peer_type: l3_interface
   ip_address: 172.15.6.6/31
@@ -231,25 +239,12 @@ loopback_interfaces:
   description: Router_ID
   shutdown: false
   ip_address: 192.168.42.3/32
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-=======
-ip_extcommunity_lists:
-- name: ECL-WAN-HA-SOO
-  entries:
-  - type: permit
-    extcommunities: soo 65000:423
->>>>>>> a53a1aba4 (Feat: Align underlay routing protocols)
-=======
 as_path:
   access_lists:
   - name: ASPATH-WAN
     entries:
     - type: permit
       match: '65000'
->>>>>>> d804f23f5 (Refactor: Use first ha peer loopback0 as SOO)
 prefix_lists:
 - name: PL-LOOPBACKS-EVPN-OVERLAY
   sequence_numbers:
@@ -306,8 +301,6 @@ route_maps:
     description: Advertise WAN HA prefixes towards LAN and mark them with SoO
     match:
     - interface Ethernet52
-<<<<<<< HEAD
-=======
     - interface Ethernet53
     set:
     - extcommunity soo 192.168.42.2:423 additive
@@ -317,7 +310,6 @@ route_maps:
     type: deny
     match:
     - extcommunity ECL-EVPN-SOO
->>>>>>> d804f23f5 (Refactor: Use first ha peer loopback0 as SOO)
   - sequence: 20
     type: permit
 - name: RM-EVPN-SOO-OUT
@@ -331,12 +323,7 @@ route_maps:
   - sequence: 10
     type: permit
     match:
-<<<<<<< HEAD
-    - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
->>>>>>> 479d1aebd (Feat: Add underlay prefixes in route-map for BGP)
-=======
     - extcommunity ECL-EVPN-SOO
->>>>>>> d804f23f5 (Refactor: Use first ha peer loopback0 as SOO)
 flow_tracking:
   hardware:
     trackers:
@@ -350,21 +337,18 @@ flow_tracking:
           host: 127.0.0.1
         local_interface: Loopback0
         template_interval: 5000
-<<<<<<< HEAD
-=======
     shutdown: false
 ip_extcommunity_lists:
 - name: ECL-EVPN-SOO
   entries:
   - type: permit
     extcommunities: soo 192.168.42.2:423
->>>>>>> d804f23f5 (Refactor: Use first ha peer loopback0 as SOO)
 ip_security:
   ike_policies:
   - name: DP-IKE-POLICY
-    local_id: 192.168.42.3
+    local_id: 192.168.142.3
   - name: CP-IKE-POLICY
-    local_id: 192.168.42.3
+    local_id: 192.168.142.3
   sa_policies:
   - name: DP-SA-POLICY
     esp:
@@ -408,12 +392,76 @@ router_adaptive_virtual_topology:
   site:
     name: Site423
     id: 423
+  profiles:
+  - name: CONTROL-PLANE-PROFILE
+    load_balance_policy: LB-CONTROL-PLANE-PROFILE
+  - name: PROD-AVT-POLICY-VOICE
+    load_balance_policy: LB-PROD-AVT-POLICY-VOICE
+  - name: PROD-AVT-POLICY-VIDEO
+    load_balance_policy: LB-PROD-AVT-POLICY-VIDEO
+  - name: PROD-AVT-POLICY-DEFAULT
+    load_balance_policy: LB-PROD-AVT-POLICY-DEFAULT
+  - name: DEFAULT-AVT-POLICY-VIDEO
+    load_balance_policy: LB-DEFAULT-AVT-POLICY-VIDEO
+  - name: DEFAULT-AVT-POLICY-DEFAULT
+    load_balance_policy: LB-DEFAULT-AVT-POLICY-DEFAULT
+  vrfs:
+  - name: default
+    policy: DEFAULT-AVT-POLICY-WITH-CP
+    profiles:
+    - name: CONTROL-PLANE-PROFILE
+      id: 254
+    - name: DEFAULT-AVT-POLICY-VIDEO
+      id: 3
+    - name: DEFAULT-AVT-POLICY-DEFAULT
+      id: 1
+  - name: PROD
+    policy: PROD-AVT-POLICY
+    profiles:
+    - name: PROD-AVT-POLICY-VOICE
+      id: 2
+    - name: PROD-AVT-POLICY-VIDEO
+      id: 4
+    - name: PROD-AVT-POLICY-DEFAULT
+      id: 1
+  - name: IT
+    policy: DEFAULT-AVT-POLICY
+    profiles:
+    - name: DEFAULT-AVT-POLICY-VIDEO
+      id: 3
+    - name: DEFAULT-AVT-POLICY-DEFAULT
+      id: 1
+  policies:
+  - name: PROD-AVT-POLICY
+    matches:
+    - application_profile: VOICE
+      avt_profile: PROD-AVT-POLICY-VOICE
+    - application_profile: VIDEO
+      avt_profile: PROD-AVT-POLICY-VIDEO
+    - application_profile: default
+      avt_profile: PROD-AVT-POLICY-DEFAULT
+  - name: DEFAULT-AVT-POLICY
+    matches:
+    - application_profile: VIDEO
+      avt_profile: DEFAULT-AVT-POLICY-VIDEO
+    - application_profile: default
+      avt_profile: DEFAULT-AVT-POLICY-DEFAULT
+  - name: DEFAULT-AVT-POLICY-WITH-CP
+    matches:
+    - application_profile: CONTROL-PLANE-APPLICATION-PROFILE
+      avt_profile: CONTROL-PLANE-PROFILE
+    - application_profile: VIDEO
+      avt_profile: DEFAULT-AVT-POLICY-VIDEO
+    - application_profile: default
+      avt_profile: DEFAULT-AVT-POLICY-DEFAULT
 router_bfd:
   multihop:
     interval: 300
     min_rx: 300
     multiplier: 3
 router_path_selection:
+  tcp_mss_ceiling:
+    ipv4_segment_size: auto
   path_groups:
   - name: MPLS
     id: 100
@@ -425,7 +473,7 @@ router_path_selection:
     dynamic_peers:
       enabled: true
     static_peers:
-    - router_ip: 192.168.44.1
+    - router_ip: 192.168.144.1
       name: cv-pathfinder-pathfinder
       ipv4_addresses:
       - 172.16.0.1
@@ -434,22 +482,17 @@ router_path_selection:
     flow_assignment: lan
     local_interfaces:
     - name: Ethernet52
+    - name: Ethernet53
     static_peers:
-    - router_ip: 192.168.42.2
+    - router_ip: 192.168.142.2
       name: LAN_HA
       ipv4_addresses:
-      - 172.17.0.3
+      - 172.17.0.5
+      - 172.17.0.7
     ipsec_profile: DP-PROFILE
   load_balance_policies:
-  - name: LBPOLICY
+  - name: LB-CONTROL-PLANE-PROFILE
     path_groups:
-<<<<<<< HEAD
-    - name: LAN_HA
-    - name: MPLS
-<<<<<<< HEAD
-=======
-=======
->>>>>>> 31f086422 (Refactor: Ordering)
     - name: LAN_HA
     - name: MPLS
   - name: LB-PROD-AVT-POLICY-VOICE
@@ -478,22 +521,68 @@ router_path_selection:
       priority: 42
 router_traffic_engineering:
   enabled: true
->>>>>>> 0f36051a1 (Feat: Proper handling of LAN_HA pathgroup on pathfinder)
 stun:
   client:
     server_profiles:
     - name: MPLS-cv-pathfinder-pathfinder-Ethernet2
       ip_address: 172.16.0.1
+application_traffic_recognition:
+  application_profiles:
+  - name: VOICE
+    applications:
+    - name: CUSTOM-VOICE-APPLICATION
+  - name: VIDEO
+    categories:
+    - name: VIDEO1
+    applications:
+    - name: CUSTOM-APPLICATION-1
+    - name: skype
+  - name: CONTROL-PLANE-APPLICATION-PROFILE
+    applications:
+    - name: CONTROL-PLANE-APPLICATION
+  categories:
+  - name: VIDEO1
+    applications:
+    - name: CUSTOM-APPLICATION-2
+    - name: microsoft-teams
+  applications:
+    ipv4_applications:
+    - name: CUSTOM-APPLICATION-1
+      protocols:
+      - tcp
+      src_prefix_set_name: CUSTOM-SRC-PREFIX-1
+      dest_prefix_set_name: CUSTOM-DEST-PREFIX-1
+    - name: CUSTOM-APPLICATION-2
+      protocols:
+      - tcp
+      tcp_src_port_set_name: TCP-SRC-2
+      tcp_dest_port_set_name: TCP-DEST-2
+    - name: CONTROL-PLANE-APPLICATION
+      dest_prefix_set_name: CONTROL-PLANE-APP-DEST-PREFIXES
+  field_sets:
+    l4_ports:
+    - name: TCP-SRC-2
+      port_values:
+      - '42'
+    - name: TCP-DEST-2
+      port_values:
+      - '666'
+      - '777'
+    ipv4_prefixes:
+    - name: CUSTOM-SRC-PREFIX-1
+      prefix_values:
+      - 42.42.42.0/24
+    - name: CUSTOM-DEST-PREFIX-1
+      prefix_values:
+      - 6.6.6.0/24
+    - name: CONTROL-PLANE-APP-DEST-PREFIXES
+      prefix_values:
+      - 192.168.144.1/32
 dps_interfaces:
 - name: Dps1
   description: DPS Interface
-<<<<<<< HEAD
-  tcp_mss_ceiling:
-    ipv4: 1000
-=======
   mtu: 9214
   ip_address: 192.168.142.3/32
->>>>>>> d804f23f5 (Refactor: Use first ha peer loopback0 as SOO)
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
 vxlan_interface:
@@ -501,10 +590,14 @@ vxlan_interface:
     description: cv-pathfinder-edge3_VTEP
     vxlan:
       udp_port: 4789
-      source_interface: Loopback0
+      source_interface: Dps1
       vrfs:
       - name: default
         vni: 1
+      - name: IT
+        vni: 100
+      - name: PROD
+        vni: 42
 metadata:
   cv_tags:
     device_tags:
@@ -517,6 +610,14 @@ metadata:
     - name: Site
       value: Site423
     interface_tags:
+    - interface: Ethernet52
+      tags:
+      - name: Type
+        value: lan
+    - interface: Ethernet53
+      tags:
+      - name: Type
+        value: lan
     - interface: Ethernet2
       tags:
       - name: Type
@@ -527,7 +628,7 @@ metadata:
         value: '10423'
   cv_pathfinder:
     role: edge
-    vtep_ip: 192.168.42.3
+    vtep_ip: 192.168.142.3
     region: AVD_Land_West
     zone: DEFAULT-ZONE
     site: Site423
@@ -537,4 +638,4 @@ metadata:
       circuit_id: '10423'
       pathgroup: MPLS
     pathfinders:
-    - vtep_ip: 192.168.44.1
+    - vtep_ip: 192.168.144.1
