Feat(eos_designs): Configure BFD timers higher than DPS timeouts for WAN BGP neighbors

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr2.cfg
@@ -155,6 +155,7 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS update-source Dps1
    neighbor WAN-OVERLAY-PEERS route-reflector-client
    neighbor WAN-OVERLAY-PEERS bfd
+   neighbor WAN-OVERLAY-PEERS bfd interval 1000 min-rx 1000 multiplier 10
    neighbor WAN-OVERLAY-PEERS ttl maximum-hops 1
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
@@ -163,6 +164,7 @@ router bgp 65000
    neighbor WAN-RR-OVERLAY-PEERS remote-as 65000
    neighbor WAN-RR-OVERLAY-PEERS update-source Dps1
    neighbor WAN-RR-OVERLAY-PEERS bfd
+   neighbor WAN-RR-OVERLAY-PEERS bfd interval 1000 min-rx 1000 multiplier 10
    neighbor WAN-RR-OVERLAY-PEERS ttl maximum-hops 1
    neighbor WAN-RR-OVERLAY-PEERS send-community
    neighbor WAN-RR-OVERLAY-PEERS maximum-routes 0
