--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_MULTI_RR_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_MULTI_RR_TESTS.yml
@@ -27,3 +27,7 @@ bgp_peer_groups:
       - 192.168.143.0/24
   wan_rr_overlay_peers:
     ttl_maximum_hops: 42
+    bfd_timers:
+      interval: 2020
+      min_rx: 2000
+      multiplier: 3
