--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge-no-common-path-group.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge-no-common-path-group.yml
@@ -17,14 +17,14 @@ router_bgp:
     send_community: all
     route_map_in: RM-BGP-UNDERLAY-PEERS-IN
     route_map_out: RM-BGP-UNDERLAY-PEERS-OUT
-  - name: WAN-OVERLAY-PEERS
+  - remote_as: '65000'
+    name: WAN-OVERLAY-PEERS
     type: wan
     update_source: Dps1
-    bfd: true
+    bfd: false
     password: htm4AZe9mIQOO1uiMuGgYQ==
     send_community: all
     maximum_routes: 0
-    remote_as: '65000'
     ttl_maximum_hops: 1
   address_family_ipv4:
     peer_groups:
