--- a/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/structured_configs/s1-leaf1.yml
+++ b/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/structured_configs/s1-leaf1.yml
@@ -122,34 +122,34 @@ metadata:
     device_tags:
     - name: Role
       value: edge
-    - name: Region
-      value: AVD_Land_East
-    - name: Zone
-      value: DEFAULT-ZONE
-    - name: Site
-      value: Site511
+    # - name: Region
+    #   value: AVD_Land_East
+    # - name: Zone
+    #   value: DEFAULT-ZONE
+    # - name: Site
+    #   value: Site511
     interface_tags:
     - interface: Ethernet1
       tags:
       - name: Type
         value: wan
-      - name: Carrier
-        value: ATT
-      - name: Circuit
-        value: '666'
+      # - name: Carrier
+      #   value: ATT
+      # - name: Circuit
+      #   value: '666'
     - interface: Ethernet2
       tags:
       - name: Type
         value: wan
-      - name: Carrier
-        value: Colt
-      - name: Circuit
-        value: '10555'
+      # - name: Carrier
+      #   value: Colt
+      # - name: Circuit
+      #   value: '10555'
     - interface: Ethernet3
       tags:
       - name: Type
         value: wan
-      - name: Carrier
-        value: Comcast-5G
-      - name: Circuit
-        value: AF830
+      # - name: Carrier
+      #   value: Comcast-5G
+      # - name: Circuit
+      #   value: AF830
